# icrl

./: .gitignore  AGENTS.md  README.md  comparison_log.txt  experiment_summary.json  ml_basics_iris.R  plan.md  pyproject.toml  rerun_errors.sh  retry_until_resolved.sh  run_baseline.sh  sgicl_v2_log.txt  sgicl_v3_log.txt  vercel.json
.codex/environments/: environment.toml
.github/workflows/: ci-tests.yml
docs/: contributing.mdx  docs.json  installation.mdx  introduction.mdx  mint.json  quickstart.mdx
docs/api-reference/: agent.mdx  anthropic-vertex-provider.mdx  curation-manager.mdx  embedder.mdx  environment.mdx  litellm-provider.mdx  llm-provider.mdx  message.mdx  overview.mdx  step-context.mdx  step.mdx  trajectory-database.mdx  trajectory-retriever.mdx  trajectory.mdx  typescript-agent.mdx  typescript-anthropic-provider.mdx  typescript-curation-manager.mdx  typescript-embedder.mdx  typescript-environment.mdx  typescript-llm-provider.mdx  typescript-models.mdx  typescript-openai-provider.mdx  typescript-package.mdx  typescript-react-loop.mdx  typescript-storage.mdx  typescript-trajectory-database.mdx  typescript-trajectory-retriever.mdx
docs/core-concepts/: curation.mdx  icrl-algorithm.mdx  react-loop.mdx  sgicl-algorithm.mdx  trajectory-database.mdx
docs/examples/: basic-anthropic-demo.mdx  basic-openai-demo.mdx  codebase-patterns-demo.mdx  exception-handling-demo.mdx  file-system-agent.mdx  harbor-coding-agent.mdx  it-support-demo.mdx  preference-learning-demo.mdx  testing-with-mock-llm.mdx  typescript-demos.mdx
docs/guides/: batch-training.mdx  cli.mdx  convex-provider.mdx  custom-environments.mdx  custom-llm-providers.mdx  prompt-templates.mdx  publishing-to-pypi.mdx  typescript-package.mdx  web-example.mdx
examples/: README.md  __init__.py  basic_anthropic_demo.py  basic_openai_demo.py  demo_with_real_llm.py  file_api_env.py  harbor_coding_agent.py  harbor_coding_mock.py  harbor_comparison.py  lean_minif2f_demo.py  mock_llm.py  sgicl_comparison_experiment.py  tasks.py  test_harbor_coding.py  test_with_mock.py
examples/codebase_patterns_demo/: .gitignore  README.md  run_ablation_test.py  run_automated_demo.py  run_demo.sh  setup_demo.py  validate_patterns.py
examples/codebase_patterns_demo/mock_codebase/: PATTERNS.md  pyproject.toml
examples/codebase_patterns_demo/mock_codebase/_reference/: README.md  comparison.md  orders_model.py  orders_routes.py  orders_service.py
examples/codebase_patterns_demo/mock_codebase/app/: __init__.py  main.py
examples/codebase_patterns_demo/mock_codebase/app/core/: __init__.py  exceptions.py  logging.py  response.py
examples/codebase_patterns_demo/mock_codebase/app/models/: __init__.py  category.py  inventory.py  order.py  product.py  user.py
examples/codebase_patterns_demo/mock_codebase/app/routes/: __init__.py  inventory.py.icrl  products.py  users.py
examples/codebase_patterns_demo/mock_codebase/app/services/: __init__.py  category_service.py  inventory_service.py  order_service.py  product_service.py  user_service.py
examples/codebase_patterns_demo/mock_codebase/tests/: __init__.py  conftest.py  test_products.py  test_users.py
examples/exception_handling_demo/: .gitignore  README.md  evaluate_responses.py  run_demo.py  run_quick_demo.sh  setup_demo.py
examples/it_support_demo/: .gitignore  README.md  evaluate_responses.py  run_demo.py  run_quick_demo.sh  setup_demo.py
examples/preference_learning_demo/: README.md  run_demo.py  setup_demo.py
experiments/lean/: COMMANDS.md  run.py
icrl-ts/: .eslintrc.cjs  AGENTS.md  README.md  package-lock.json  package.json
icrl-ts/examples/: README.md  _demo_shared.ts  _live_env.ts  anthropic-demo.ts  anthropic-live.ts  basic.ts  batch.ts  curation.ts  database.ts  incident-response-demo.ts  loop.ts  models.ts  openai-demo.ts  openai-live.ts  providers.ts  retriever.ts  support-triage-demo.ts  web-convex-demo.ts
icrl-ts/src/: agent.ts  curation.ts  database.ts  index.ts  loop.ts  models.ts  protocols.ts  retriever.ts  storage.ts
icrl-ts/tests/: README.md  _shared.ts  basic.ts  batch.ts  curation.ts  database.ts  loop.ts  models.ts  providers.ts  retriever.ts
icrl-ts/web-example/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
icrl-ts/web-landing/: .gitignore  next.config.ts  package.json
src/icicl/: __init__.py  _debug.py  agent.py  curation.py  database.py  embedder.py  loop.py  models.py  protocols.py  retriever.py
tests/: README.md  agent_api_walkthrough.py  database_api_walkthrough.py  test_harbor_coding.py  test_with_mock.py
(+157 files in other folders)
