[project]
name = "icicl"
version = "0.1.0"
description = "Self-Generated In-Context Learning for LLM Agents"
readme = "README.md"
authors = [
    { name = "Asanshay Gupta", email = "46036121+SuperAce100@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "litellm>=1.0.0",
    "sentence-transformers>=2.0.0",
    "faiss-cpu>=1.7.0",
    "aiofiles>=23.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "harbor>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
