[project]
name = "icrl"
version = "0.1.0"
description = "In-Context Reinforcement Learning for LLM Agents"
readme = "README.md"
authors = [
    { name = "Asanshay Gupta", email = "46036121+SuperAce100@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "litellm>=1.0.0",
    "sentence-transformers>=2.0.0",
    "faiss-cpu>=1.7.0",
    "aiofiles>=23.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "harbor>=0.1.0",
    "typer[all]>=0.9.0",
    "textual>=0.40.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "google-cloud-aiplatform>=1.38",
]

[project.scripts]
icrl = "icrl.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "I001", "F541"]

[tool.ty.environment]
python-version = "3.12"
root = ["src"]

[tool.ty.rules]
deprecated = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-method-override = "ignore"
unresolved-attribute = "ignore"
unresolved-reference = "ignore"

[tool.pytest.ini_options]
# Avoid collecting Harbor/SWE-bench verifier logs as doctests.
addopts = "-p no:doctest"
norecursedirs = ["harbor_jobs", ".venv", "docs", "build", "dist"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "ty>=0.0.15",
]
